feat(payment): implement payment processing with Stripe integration, including withdrawal functionality and webhook handling
feat(subscription): add subscription management features, including creation, editing, and retrieval of subscriptions

feat(transaction): implement transaction logging and retrieval for user transactions

feat(email): create email templates for user notifications

feat(queue): set up job queues for file deletion, Stripe account creation, and withdrawal processing

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
-node_modules
-.env
+/node_modules
+*.keys
 
 /dist
 /prisma
 /tmp
 
-*.log
-uploads/*
-.vscode/*
+/logs
+/uploads
+/.vscode/settings.json
 api*.json
-postman/*
-
-**/migrations
