--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A modern, batteries-included Express.js boilerplate to kickstart your Node.js backend with best practices.",
   "main": "dist/server.js",
+  "type": "module",
   "author": {
     "name": "Shaishab Chandra Shil",
     "github": "https://github.com/shaishab316"
@@ -12,21 +13,26 @@
     "url": "https://github.com/shaishab316/express-it.git"
   },
   "scripts": {
-    "prepare": "simple-git-hooks",
+    "prepare": "simple-git-hooks && npx dotenvx ext precommit --install",
     "new-module": "tsx ./src/app/modules/.builder.ts",
-    "build": "node esbuild.mjs",
-    "start": "node dist/server.js",
-    "dev": "set DEBUG=socket.io* && tsx --watch src/server.ts",
-    "seed-admin": "tsx scripts/seedAdmin.ts",
+    "build": "tsx esbuild.mts",
+    "start": "npx dotenvx run -- node dist/server.js",
+    "dev": "npm run type-check && set DEBUG=socket.io* && npx dotenvx run -- tsx --watch --inspect src/server.ts",
+    "dev-f5": "concurrently npm:dev npm:prisma-studio",
+    "seed-admin": "npx dotenvx run -- tsx scripts/seedAdmin.ts",
+    "seed-stripe": "npx dotenvx run -- tsx scripts/seedStripe.ts",
     "lint": "eslint src --ignore-path .gitignore --ext .ts",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
     "type-check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prisma-studio": "npx prisma studio",
-    "prisma-reset": "npx prisma migrate reset --force",
-    "prisma-migrate": "npx prisma migrate dev",
-    "prisma-generate": "rm -rf prisma && npx prisma generate",
-    "prisma-seed": "npx prisma db seed"
+    "prisma-studio": "npx dotenvx run -- npx prisma studio",
+    "prisma-reset": "npx dotenvx run -- npx prisma migrate reset --force",
+    "prisma-migrate": "npx dotenvx run -- npx prisma migrate dev",
+    "prisma-generate": "npx prisma generate",
+    "prisma-clean": "rm -rf prisma",
+    "prisma-seed": "npx dotenvx run -- npx prisma db seed",
+    "env-encrypt": "npx dotenvx encrypt -f .env",
+    "env-decrypt": "npx dotenvx decrypt -f .env"
   },
   "keywords": [
     "express-boilerplate",
@@ -45,6 +51,7 @@
     "pre-commit": "npm run lint && npm run type-check && npm run prettier"
   },
   "devDependencies": {
+    "@dotenvx/dotenvx": "^1.51.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.5",
@@ -52,20 +59,23 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mjml": "^4.7.4",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.16",
+    "@types/pg": "^8.15.6",
+    "@types/sanitize-html": "^2.16.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
+    "concurrently": "^9.2.1",
     "esbuild": "^0.25.11",
     "esbuild-node-externals": "^1.18.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "inquirer": "^12.10.0",
-    "ora": "^9.0.0",
     "prettier": "^3.4.2",
     "prettier-eslint": "^16.3.0",
-    "prisma": "^6.18.0",
+    "prisma": "^7.0.0",
     "semantic-release": "^24.2.7",
     "simple-git-hooks": "^2.13.1",
     "table": "^6.9.0",
@@ -73,7 +83,8 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@prisma/client": "^6.18.0",
+    "@prisma/adapter-pg": "^7.0.0",
+    "@prisma/client": "^7.0.0",
     "@types/node": "^24.3.0",
     "axios": "^1.12.0",
     "bcryptjs": "^3.0.2",
@@ -81,22 +92,29 @@
     "chalk": "^5.6.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.19",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
+    "handlebars": "^4.7.8",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mjml": "^4.16.1",
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.7",
+    "ora": "^9.0.0",
     "otplib": "^12.0.1",
+    "pg": "^8.16.3",
     "redis": "^5.9.0",
+    "sanitize-html": "^2.17.0",
     "socket.io": "^4.8.1",
     "strip-ansi": "^7.1.2",
     "stripe": "^19.1.0",
     "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.12"
   }
 }
