feat: add alias for src directory and update import paths across the application
- Added alias configuration in esbuild for easier imports.
- Updated import paths in middleware, modules, and utils to use the new alias.
- Refactored various files to improve code readability and maintainability.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   }
 }
