chore: Update Prisma config and ignore env files
Updates Prisma configuration and ignores environment files.
Modifies the output directory for Prisma client generation and adds
`.env` to `.gitignore`. Also updates the `prisma-clean` script to
remove the client directory instead of the entire prisma directory.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "prisma-reset": "npx dotenvx run -- npx prisma migrate reset --force",
     "prisma-migrate": "npx dotenvx run -- npx prisma migrate dev",
     "prisma-generate": "npx prisma generate",
-    "prisma-clean": "rm -rf prisma",
+    "prisma-clean": "rm -rf prisma/client",
     "prisma-seed": "npx dotenvx run -- npx prisma db seed",
     "env-encrypt": "npx dotenvx encrypt -f .env",
     "env-decrypt": "npx dotenvx decrypt -f .env"
