--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
   },
   "scripts": {
     "prepare": "simple-git-hooks && npx dotenvx ext precommit --install",
-    "new-module": "tsx ./src/app/modules/.builder.ts",
+    "new-module": "tsx ./src/modules/.builder.ts",
     "build": "tsx esbuild.mts",
-    "start": "npx dotenvx run -- node dist/server.js",
-    "dev": "npm run type-check && set DEBUG=socket.io* && npx dotenvx run -- tsx --watch --inspect src/server.ts",
+    "start": "node dist/server.js",
+    "dev": "npm run type-check && set DEBUG=socket.io* && tsx --watch --inspect src/server.ts",
     "dev-f5": "concurrently npm:dev npm:prisma-studio",
-    "seed-admin": "npx dotenvx run -- tsx scripts/seedAdmin.ts",
-    "seed-stripe": "npx dotenvx run -- tsx scripts/seedStripe.ts",
+    "seed-admin": "tsx scripts/seedAdmin.ts",
+    "seed-stripe": "tsx scripts/seedStripe.ts",
     "lint": "eslint src --ignore-path .gitignore --ext .ts",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
     "type-check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prisma-studio": "npx dotenvx run -- npx prisma studio",
-    "prisma-reset": "npx dotenvx run -- npx prisma migrate reset --force",
-    "prisma-migrate": "npx dotenvx run -- npx prisma migrate dev",
+    "prisma-studio": "npx prisma studio",
+    "prisma-reset": "npx prisma migrate reset --force",
+    "prisma-migrate": "npx prisma migrate dev",
     "prisma-generate": "npx prisma generate",
     "prisma-clean": "rm -rf prisma/client",
-    "prisma-seed": "npx dotenvx run -- npx prisma db seed",
+    "prisma-seed": "npx prisma db seed",
     "env-encrypt": "npx dotenvx encrypt -f .env",
     "env-decrypt": "npx dotenvx decrypt -f .env"
   },
@@ -51,7 +51,6 @@
     "pre-commit": "npm run lint && npm run type-check && npm run prettier"
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.51.1",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.5",
@@ -83,6 +82,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.51.1",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
     "@types/node": "^24.3.0",
@@ -93,7 +93,6 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.19",
-    "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "handlebars": "^4.7.8",
