chore: Remove concurrently and add seed-env script
This commit removes the `concurrently` dependency and updates the
`dev` script to use `tsx --watch` directly, simplifying the
development workflow.

Additionally, a `seed-env` script has been added, using `tsx src/config`
to seed environment variables.

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "new-module": "tsx ./src/modules/.builder.ts",
     "build": "tsx esbuild.mts",
     "start": "node dist/server.js",
-    "dev": "npm run type-check && set DEBUG=socket.io* && tsx --watch --inspect src/server.ts",
-    "dev-f5": "concurrently npm:dev npm:prisma-studio",
+    "dev": "tsx --watch src/server.ts",
+    "dev-f5": "npm run type-check && set DEBUG=socket.io* && tsx --watch --inspect src/server.ts",
+    "seed-env": "tsx src/config",
     "seed-admin": "tsx scripts/seedAdmin.ts",
     "seed-stripe": "tsx scripts/seedStripe.ts",
     "lint": "eslint src --ignore-path .gitignore --ext .ts",
@@ -66,7 +67,6 @@
     "@types/sanitize-html": "^2.16.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
-    "concurrently": "^9.2.1",
     "esbuild": "^0.25.11",
     "esbuild-node-externals": "^1.18.0",
     "eslint": "^8.57.1",
