Refactor: Improve environment config & initial setup
- Update `.env.example` with new defaults and clarity.
- Add `env-seed` script for `.env` generation.
- Remove auto-generation of `.env` during development.
- Allow server to bind to configurable host address.
- Move admin user seeding to a separate script.
- Open Prisma Studio without a browser.

--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
     "start": "node dist/server.js",
     "dev": "tsx --watch src/server.ts",
     "dev-f5": "npm run type-check && set DEBUG=socket.io* && tsx --watch --inspect src/server.ts",
-    "seed-env": "tsx src/config",
     "seed-admin": "tsx scripts/seedAdmin.ts",
     "seed-stripe": "tsx scripts/seedStripe.ts",
     "lint": "eslint src --ignore-path .gitignore --ext .ts",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
     "type-check": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prisma-studio": "npx prisma studio",
+    "prisma-studio": "npx prisma studio --browser none",
     "prisma-reset": "npx prisma migrate reset --force",
     "prisma-migrate": "npx prisma migrate dev",
     "prisma-generate": "npx prisma generate",
     "prisma-clean": "rm -rf prisma/client",
     "prisma-seed": "npx prisma db seed",
+    "env-seed": "tsx src/config",
     "env-encrypt": "npx dotenvx encrypt -f .env",
     "env-decrypt": "npx dotenvx decrypt -f .env"
   },
