--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "@db": ["src/utils/db"]
     }
   }
 }
