chore: update package version to 1.4.0 and enhance scripts
- Bumped version from 1.0.0 to 1.4.0 in package.json
- Refactored script names for consistency (e.g., changed "dev-f5" to "dev:f5")
- Added new test scripts using Vitest for improved testing capabilities
- Updated Prisma commands to use a consistent naming convention
- Added dotenvx commands for environment variable encryption/decryption
- Introduced vitest.config.ts for Vitest configuration, including coverage settings and path aliases

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-it",
-  "version": "1.0.0",
+  "version": "1.4.0",
   "description": "A modern, batteries-included Express.js boilerplate to kickstart your Node.js backend with best practices.",
   "main": "dist/server.js",
   "type": "module",
@@ -18,22 +18,24 @@
     "build": "tsx esbuild.mts",
     "start": "node dist/server.js",
     "dev": "tsx --watch src/server.ts",
-    "dev-f5": "npm run type-check && set DEBUG=socket.io* && tsx --watch --inspect src/server.ts",
-    "seed-admin": "tsx scripts/seedAdmin.ts",
-    "seed-stripe": "tsx scripts/seedStripe.ts",
+    "dev:f5": "npm run type-check && set DEBUG=socket.io* && tsx --watch --inspect src/server.ts",
+    "seed:admin": "tsx scripts/seedAdmin.ts",
+    "seed:stripe": "tsx scripts/seedStripe.ts",
+    "seed:env": "tsx src/config",
     "lint": "eslint src --ignore-path .gitignore --ext .ts",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
     "type-check": "tsc --noEmit",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prisma-studio": "npx prisma studio --browser none",
-    "prisma-reset": "npx prisma migrate reset --force",
-    "prisma-migrate": "npx prisma migrate dev",
-    "prisma-generate": "npx prisma generate",
-    "prisma-clean": "rm -rf prisma/client",
-    "prisma-seed": "npx prisma db seed",
-    "env-seed": "tsx src/config",
-    "env-encrypt": "npx dotenvx encrypt -f .env",
-    "env-decrypt": "npx dotenvx decrypt -f .env"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "prisma:studio": "npx prisma studio --browser none",
+    "prisma:reset": "npx prisma migrate reset --force",
+    "prisma:migrate": "npx prisma migrate dev",
+    "prisma:generate": "npx prisma generate",
+    "prisma:clean": "rm -rf prisma/client",
+    "env:encrypt": "npx dotenvx encrypt -f .env",
+    "env:decrypt": "npx dotenvx decrypt -f .env"
   },
   "keywords": [
     "express-boilerplate",
@@ -65,8 +67,11 @@
     "@types/nodemailer": "^6.4.16",
     "@types/pg": "^8.15.6",
     "@types/sanitize-html": "^2.16.0",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
+    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "esbuild": "^0.25.11",
     "esbuild-node-externals": "^1.18.0",
     "eslint": "^8.57.1",
@@ -77,9 +82,11 @@
     "prisma": "^7.0.0",
     "semantic-release": "^24.2.7",
     "simple-git-hooks": "^2.13.1",
+    "supertest": "^7.1.4",
     "table": "^6.9.0",
     "tsx": "^4.20.6",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vitest": "^4.0.16"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.51.1",
