--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "request": "launch",
       "name": "Debug Express",
       "runtimeExecutable": "npm",
-      "runtimeArgs": ["run", "dev-f5"],
+      "runtimeArgs": ["run", "dev:f5"],
       "console": "integratedTerminal",
       "skipFiles": ["<node_internals>/**"],
       "sourceMaps": true,
