feat: add faker.js for test data generation and implement E2E tests for user registration
- Added @faker-js/faker as a dev dependency for generating fake data.
- Updated prisma.config.ts to use a test database in the test environment.
- Refactored server configuration to simplify NODE_ENV handling.
- Adjusted database connection string to ensure the correct database is used in test environment.
- Created E2E tests for user registration in auth.e2e.test.ts.
- Added setup file for test database connection and reset after tests.
- Updated tsconfig.json to include test directory for TypeScript compilation.
- Fixed import path in vitest.config.ts for database utilities.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "prisma"],
+  "include": ["src", "prisma", "test"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "target": "ES2023",
