--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "pre-commit": "npm run lint && npm run type-check && npm run prettier"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.5",
